Funcionou a câmera, mas ainda tem problemas

--- a/app/src/main/res/layout/activity_tela_principal.xml
+++ b/app/src/main/res/layout/activity_tela_principal.xml
@@ -12,7 +12,7 @@
 
     <FrameLayout
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="200dp"
         android:id="@+id/camera_preview"></FrameLayout>
 
     <Button
@@ -31,5 +31,13 @@
         android:layout_below="@+id/tirar_foto"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="147dp" />
+
+    <Button
+        android:text="Monstrar imagem"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/mostrar_imagem"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
