--- a/app/src/main/res/layout/activity_tela_principal.xml
+++ b/app/src/main/res/layout/activity_tela_principal.xml
@@ -13,16 +13,9 @@
     <FrameLayout
         android:layout_width="fill_parent"
         android:layout_height="200dp"
-        android:id="@+id/camera_preview"></FrameLayout>
+        android:id="@+id/camera_preview">
 
-    <Button
-        android:text="Tirar uma foto"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="90dp"
-        android:id="@+id/tirar_foto" />
+    </FrameLayout>
 
     <ImageView
         android:layout_width="wrap_content"
@@ -31,5 +24,24 @@
         android:layout_below="@+id/tirar_foto"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="147dp" />
+
+    <Button
+        android:text="Tirar uma foto"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tirar_foto"
+        android:layout_alignBaseline="@+id/gravar_video"
+        android:layout_alignBottom="@+id/gravar_video"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <Button
+        android:text="Gravar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/gravar_video"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
