--- a/app/src/main/res/layout/activity_tela_principal.xml
+++ b/app/src/main/res/layout/activity_tela_principal.xml
@@ -4,36 +4,7 @@
     android:id="@+id/activity_tela_principal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.android.tr2_android.TelaPrincipal">
-
-    <FrameLayout
-        android:layout_width="fill_parent"
-        android:layout_height="200dp"
-        android:id="@+id/camera_preview">
-
-    </FrameLayout>
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/foto"
-        android:layout_below="@+id/tirar_foto"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="147dp" />
-
-    <Button
-        android:text="Tirar uma foto"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/tirar_foto"
-        android:layout_alignBaseline="@+id/gravar_video"
-        android:layout_alignBottom="@+id/gravar_video"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
 
     <Button
         android:text="Gravar"
@@ -41,7 +12,19 @@
         android:layout_height="wrap_content"
         android:id="@+id/gravar_video"
         android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:text="Tirar uma foto"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tirar_foto"
+        android:layout_below="@+id/gravar_video"
+        android:layout_centerHorizontal="true"/>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/camera_preview"/>
 
 </RelativeLayout>
