--- a/app/src/main/res/layout/activity_tela_login.xml
+++ b/app/src/main/res/layout/activity_tela_login.xml
@@ -14,12 +14,12 @@
 
 
         <EditText
-            android:id="@+id/edNome"
+            android:id="@+id/edEmail"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:maxLines="1"
             android:inputType="textPersonName"
-            android:hint="@string/nome"  />
+            android:hint="Email"  />
 
         <EditText
             android:id="@+id/edSenha"
