Dialog ao abrir a camera Créditos arruma o login

--- a/app/src/main/res/layout/activity_tela_login.xml
+++ b/app/src/main/res/layout/activity_tela_login.xml
@@ -12,7 +12,8 @@
         android:id="@+id/linearLayout"
         android:paddingTop="56dp"
         android:paddingLeft="24dp"
-        android:paddingRight="24dp">
+        android:paddingRight="24dp"
+        android:weightSum="1">
 
         <ImageView
             android:layout_width="match_parent"
@@ -55,6 +56,15 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="@string/para_testes" />
+
+        <TextView
+            android:id="@+id/link_creditos"
+            android:layout_width="fill_parent"
+            android:layout_height="24dp"
+            android:layout_marginTop="24dp"
+            android:text="créditos"
+            android:gravity="center"
+            android:textSize="16sp" />
 
     </LinearLayout>
 
